--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,16 @@
 <h1>New Article</h1>
+<style>
+h1{
 
+color:red;
+margin-left: 500px;
+}
+p {
+margin-left: 10px;
+
+}
+
+</style>
 
 <%= form_for @article do |form| %>
 
