--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-  color: maroon;
+  color: red;
   text-align: center;
 } 
 </style>
@@ -12,9 +12,11 @@ h1 {
 
 <body>
 
-<h1>Hello, Rails!</h1>
+<h1>Ruby on Rails</h1>
 
 <%= link_to 'My Articles', articles_path %>
 
 </body>
+
+
 
